# dark-orbit

./: CMakeLists.txt  README.md  build.sh
fixtures/: collision.txt  different_positions.txt  same_omega.txt  simple.txt  thousand_of_spheres.txt  two_spheres.txt
src/: generator.py  main.cpp
src/classes/: AlgebraicUtils.cpp  AlgebraicUtils.h  Errors.cpp  Errors.h  RotationMatrix.cpp  RotationMatrix.h  Simulation.cpp  Simulation.h  Sphere.cpp  Sphere.h  Utilities.cpp  Utilities.h  Vector3.cpp  Vector3.h
src/test/: TestRotationMatrix.cpp  TestRotationMatrix.h  TestSphere.cpp  TestSphere.h  TestSuite.cpp  TestSuite.h  TestVector3.cpp  TestVector3.h  algebraic_operations.cpp  simulation_logic.cpp  test.cpp
